--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -3,7 +3,7 @@
 <link
   rel="stylesheet"
   type="text/css"
-  href="{{ url_for('static', filename='css/contacto.css') }}"
+  href="{{ url_for('static', filename='css/base-backgrounds.css') }}"
 />
 <link
   rel="stylesheet"
@@ -71,7 +71,7 @@
 
 <!-- SECCION PRINCIPAL -->
 <!-- AREA PRINCIPAL -->
-<section class="dataUser">
+<section class="dataUser du-background">
   <!-- search bar right align -->
   <form class="form" action="/entry" method="POST">
     <h2>Contáctanos</h2>
