--- a/templates/registro.html
+++ b/templates/registro.html
@@ -2,7 +2,7 @@
 <link
   rel="stylesheet"
   type="text/css"
-  href="{{ url_for('static', filename='css/registro.css') }}"
+  href="{{ url_for('static', filename='css/base-backgrounds.css') }}"
 />
 <link
   rel="stylesheet"
@@ -26,7 +26,7 @@
 </div> -->
 <!-- AREA PRINCIPAL -->
 <div class="bg-img"></div>
-<div class="dataUser">
+<div class="dataUser du-background">
   <form class="form" action="/registerNew" method="POST">
     <h2>Registro de Usuario</h2>
     <p>
