--- a/static/css/deprecated/review-bak.css
+++ b/static/css/deprecated/review-bak.css
@@ -1,35 +1,11 @@
-.dataUser {
-  background-image: url("../img/img-habitacion/230031199.jpg");
-  background-position: center;
-  background-repeat: no-repeat, repeat;
-  background-size: cover;
-}
-
-/* .form {
-  background-color: var(--white);
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
-} */
-/* .galeria-img {
-  padding: 0 1.68rem 1.68rem 1.68rem;
-  vertical-align: center;
-  width: 100%;
-  object-fit: contain;
-  position: sticky;
-} */
-.base-main {
-  background-color: var(--blue);
-}
-.dataUser {
-  /* color: firebrick; */
-}
 .star-rating {
-  float: left;
-  /* height: 46px; */
-  width: fit-content;
-  padding: 0 10px;
+  display: flex;
+  flex-direction: row-reverse;
+  /* justify-content: flex-start; */
+  float: right;
+  height: 46px;
+  /* padding: 0 10px; */
+  /* flex-direction: row; */
 }
 .star-rating:not(:checked) > input {
   position: absolute;
@@ -41,7 +17,7 @@
   overflow: hidden;
   white-space: nowrap;
   cursor: pointer;
-  font-size: 30px;
+  font-size: 2rem;
   /* color: #ccc; */
 }
 .star-rating:not(:checked) > label:before {
