--- a/templates/users.html
+++ b/templates/users.html
@@ -7,8 +7,23 @@
 <link
   rel="stylesheet"
   type="text/css"
-  href="{{ url_for('static', filename='css/users.css') }}"
+  href="{{ url_for('static', filename='css/base-tables.css') }}"
 />
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-forms.css') }}"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-buttons.css') }}"
+/>
+<!-- <link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/users.css') }}"
+/> -->
 {% endblock %} {% block content %}
 <!-- MODAL EDIT REVIEW -->
 <div id="modal-id02" class="modal">
@@ -180,119 +195,136 @@
 <!-- END MODAL SAVE DATA-USERS -->
 
 <!-- SECCION PRINCIPAL -->
-<main class="container">
-  <div class="base-main">
-    <!-- AREA PRINCIPAL -->
-    <section class="dataUser">
-      <h2>Datos de Usuario</h2>
-      <form action="#" class="inputs_dataUser">
-        <label class="texto" for="cedula">Cédula</label>
+<!-- AREA PRINCIPAL -->
+<section class="dataUser">
+  <h2>Datos de Usuario</h2>
+  <form action="#" class="form inputs_dataUser">
+    <p>
+      <label class="texto" for="cedula">Cédula</label>
+      <span>
         <input type="email" name="cedula" id="cedula" />
-        <br />
-        <label class="texto" for="nombre">Nombre</label>
+      </span>
+    </p>
+    <p>
+      <label class="texto" for="nombre">Nombre</label>
+      <span>
         <input type="email" name="nombre" id="nombre" />
-        <br />
-        <label class="texto" for="apellido">Apellido</label>
+      </span>
+    </p>
+    <p>
+      <label class="texto" for="apellido">Apellido</label>
+      <span>
         <input type="email" name="apellido" id="apellido" />
-        <br />
-        <label for="fechaNacimiento">Fecha de Nacimiento</label>
+      </span>
+    </p>
+    <p>
+      <label for="fechaNacimiento">Fecha de Nacimiento</label>
+      <span>
         <input type="date" name="fechaNacimiento" id="fechaNacimiento" />
-        <br />
-        <label for="correo">Correo Electrónico</label>
+      </span>
+    </p>
+    <p>
+      <label for="correo">Correo Electrónico</label>
+      <span>
         <input type="email" name="correo" id="correo" />
-        <br />
-        <label for="celular">Celular</label>
+      </span>
+    </p>
+    <p>
+      <label for="celular">Celular</label>
+      <span>
         <input type="phone" name="celular" id="celular" />
-      </form>
+      </span>
+    </p>
+    <p>
       <input
-        class="btnGuardar"
+        class="btn-submit btn-submit-blue btnGuardar"
         type="submit"
         name="botonGuardar"
         value="Guardar"
         onclick="document.getElementById('modal-id04').style.display='block'"
         data-open="modal-id04"
       />
-    </section>
-    <!-- LISTA RESERVAS -->
-    <div class="reserves">
-      <h2>Listado de Reservas</h2>
-      <table class="reservesTable">
-        <thead>
-          <tr>
-            <caption>
-              Se presentan todas las reservas activas e inactivas
-            </caption>
-            <th>ID</th>
-            <th>Fecha</th>
-            <th>Entrada</th>
-            <th>Salida</th>
-            <th>Huespedes</th>
-            <th>$ Valor</th>
-            <th>Estado</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </tbody>
-      </table>
-      <h4>
-        ¿Quieres realizar cambios?
-        <strong><a href="#">Contáctanos</a></strong>
-      </h4>
-    </div>
-    <!-- LISTA COMENTARIOS -->
-    <div class="reviews">
-      <h2>Comentarios Realizados</h2>
-      <div>
-        <table class="reviewsTable">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Fecha</th>
-              <th>Comentario</th>
-              <th>
-                All<input type="checkbox" name="check[]" value="0" id="chk0" />
-              </th>
-            </tr>
-          </thead>
-          <tbody style="cursor: pointer">
-            <tr onclick="seleccionar(this,1)">
-              <td>DFG555</td>
-              <td>24/07/2022</td>
-              <td>El hotel es increíble, totalmente recomendado</td>
-              <td onclick="seleccionar(this,1)">
-                <input type="checkbox" name="check[]" value="1" id="chk1" />
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div>
-        <input
-          class="btnEditar"
-          type="submit"
-          name="botonEditar"
-          value="Editar Comentario"
-          onclick="document.getElementById('modal-id02').style.display='block'"
-          data-open="modal-id02"
-        />
-        <input
-          class="btnEliminar"
-          type="submit"
-          name="botonEliminar"
-          value="Eliminar Comentario"
-          onclick="document.getElementById('modal-id03').style.display='block'"
-          data-open="modal-id03"
-        />
-        <!-- <h4><strong><a href="#">Borrar Comentario</a></strong></h4> -->
-      </div>
-    </div>
+    </p>
+  </form>
+</section>
+<!-- LISTA RESERVAS -->
+<div class="reserves">
+  <h2>Listado de Reservas</h2>
+  <table class="tables reservesTable">
+    <thead>
+      <tr>
+        <caption>
+          Se presentan todas las reservas activas e inactivas
+        </caption>
+        <th>ID</th>
+        <th>Fecha</th>
+        <th>Entrada</th>
+        <th>Salida</th>
+        <th>Huespedes</th>
+        <th>$ Valor</th>
+        <th>Estado</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+  <h4>
+    ¿Quieres realizar cambios?
+    <strong><a href="#">Contáctanos</a></strong>
+  </h4>
+</div>
+<!-- LISTA COMENTARIOS -->
+<div class="reviews">
+  <h2>Comentarios Realizados</h2>
+  <div>
+    <table class="tables reviewsTable">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Fecha</th>
+          <th>Comentario</th>
+          <th>
+            All<input type="checkbox" name="check[]" value="0" id="chk0" />
+          </th>
+        </tr>
+      </thead>
+      <tbody style="cursor: pointer">
+        <tr onclick="seleccionar(this,1)">
+          <td>DFG555</td>
+          <td>24/07/2022</td>
+          <td>El hotel es increíble, totalmente recomendado</td>
+          <td onclick="seleccionar(this,1)">
+            <input type="checkbox" name="check[]" value="1" id="chk1" />
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-</main>
+  <div>
+    <input
+      class="btn-submit btn-submit-blue btnEditar"
+      type="submit"
+      name="botonEditar"
+      value="Editar Comentario"
+      onclick="document.getElementById('modal-id02').style.display='block'"
+      data-open="modal-id02"
+    />
+    <input
+      class="btn-submit btn-submit-red btnEliminar"
+      type="submit"
+      name="botonEliminar"
+      value="Eliminar Comentario"
+      onclick="document.getElementById('modal-id03').style.display='block'"
+      data-open="modal-id03"
+    />
+    <!-- <h4><strong><a href="#">Borrar Comentario</a></strong></h4> -->
+  </div>
+</div>
 
 <script>
   function seleccionar(tr, value) {
