--- a/templates/base.html
+++ b/templates/base.html
@@ -1,95 +1,72 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}"/>
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}"> -->
-    {% block head %}
-    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}"/> -->
-    {% endblock %}
 
-    <!-- FONTAWESOME OK -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}" />
+  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}"> -->
+  {% block head %}
+  <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}"/> -->
+  {% endblock %}
 
-    <script
-      src="{{ url_for('static', filename='js/sidebar.js') }}"
-      async
-    ></script>
-    <script
-      src="{{ url_for('static', filename='js/slideshow.js') }}"
-      async
-    ></script>
-    <script
-      src="{{ url_for('static', filename='js/modal.js') }}"
-      async
-    ></script>
+  <!-- FONTAWESOME OK -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Hotel Rose Ryhaan by Rotana</title>
-  </head>
+  <script src="{{ url_for('static', filename='js/sidebar.js') }}" async></script>
+  <script src="{{ url_for('static', filename='js/slideshow.js') }}" async></script>
+  <script src="{{ url_for('static', filename='js/modal.js') }}" async></script>
 
-  <body>
-    <div id="mainContainer">
-      <header class="topbar">
-        <div class="logo-top">
-          <a href={{ url_for("home") }}>
-            <span class="icon">
-              <img
-                src="{{ url_for('static', filename='img/svg/logo-ryhaan.svg') }}"
-                alt="Logo-Ryhaan"
-              />
-            </span>
-          </a>
-        </div>
-        <div class="logo-top">
-          <a href={{ url_for("home") }}>
-            <img
-              src="{{ url_for('static', filename='img/svg/logo-ryhaan_dubai.svg') }}"
-              alt="Rose Ryhaan Dubai"
-            />
-          </a>
-        </div>
-        <!-- search bar right align -->
-        <div class="search">
-          <form action="#">
-            <input type="text" placeholder="Buscar" name="search" />
-            <button type="submit">
-              <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-          </form>
-        </div>
-        <!--agregar login-->
-      </header>
-      <!-- MENU SIDEBAR -->
-      <nav id="mySidebar" class="sidebar">
-        <div class="sidebar-content">
-          <ul>
-            <!-- SIDEBAR - BOTON OPEN -->
-            <button
-              class="toggle"
-              onclick="openOrClose(value)"
-              value="0"
-              id="openbtn"
-            >
-              <i class="fa-solid fa-bars"></i>
-            </button>
-            <!-- ENLACES SIDEBAR -->
-            <li>
-              <a href={{ url_for("home") }}>
-                <span class="icon">
-                  <i class="fa-solid fa-hotel"></i>
-                </span>
-                <span class="title">Inicio</span>
-              </a>
-            </li>
-            <!-- <li>
+  <title>Hotel Rose Ryhaan by Rotana</title>
+</head>
+
+<body>
+  <div id="mainContainer">
+    <header class="topbar">
+      <div class="logo-top">
+        <a href={{ url_for("home") }}>
+          <span class="icon">
+            <img src="{{ url_for('static', filename='img/svg/logo-ryhaan.svg') }}" alt="Logo-Ryhaan" />
+          </span>
+        </a>
+      </div>
+      <div class="logo-top">
+        <a href={{ url_for("home") }}>
+          <img src="{{ url_for('static', filename='img/svg/logo-ryhaan_dubai.svg') }}" alt="Rose Ryhaan Dubai" />
+        </a>
+      </div>
+      <!-- search bar right align -->
+      <div class="search">
+        <form action="#">
+          <input type="text" placeholder="Buscar" name="search" />
+          <button type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+      </div>
+      <!--agregar login-->
+    </header>
+    <!-- MENU SIDEBAR -->
+    <nav id="mySidebar" class="sidebar">
+      <div class="sidebar-content">
+        <ul>
+          <!-- SIDEBAR - BOTON OPEN -->
+          <button class="toggle" onclick="openOrClose(value)" value="0" id="openbtn">
+            <i class="fa-solid fa-bars"></i>
+          </button>
+          <!-- ENLACES SIDEBAR -->
+          <li>
+            <a href={{ url_for("home") }}>
+              <span class="icon">
+                <i class="fa-solid fa-hotel"></i>
+              </span>
+              <span class="title">Inicio</span>
+            </a>
+          </li>
+          <!-- <li>
               <a href={{ url_for("rooms") }}>
                 <span class="icon">
                   <i class="fa-solid fa-bed"></i>
@@ -97,203 +74,170 @@
                 <span class="title">Habitaciones</span>
               </a>
             </li> -->
-            <li>
-              <a href={{ url_for("booking") }}>
-                <span class="icon">
-                  <i class="fa-solid fa-book"></i>
-                </span>
-                <span class="title">Reservas</span>
-              </a>
-            </li>
-            <li>
-              <a href={{ url_for("contact") }}>
-                <span class="icon">
-                  <i class="fa-solid fa-phone"></i>
-                </span>
-                <span class="title">Contacto</span>
-              </a>
-            </li>
-            <li>
-              <a href={{ url_for("about") }}>
-                <span class="icon">
-                  <i class="fa-solid fa-id-badge"></i>
-                </span>
-                <span class="title">Sobre Nosotros</span>
-              </a>
-            </li>
-            <li>
-              <!-- TODO if logged in then go to user -->
-              <a href="#">
-                <span
-                  class="icon modal-btn"
-                  onclick="openModal()"
-                  data-open="modal-id01"
-                >
-                  <i class="fa-solid fa-circle-user"></i>
-                </span>
-                <span class="title" onclick="openModal()" data-open="modal-id01"
-                  >Usuario</span
-                >
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span
-                  class="icon modal-btn"
-                  onclick="openModal()"
-                  data-open="modal-id01"
-                >
-                  <i class="fa-solid fa-right-to-bracket"></i>
-                </span>
-                <span class="title" onclick="openModal()" data-open="modal-id01"
-                  >Iniciar Sesión</span
-                >
-              </a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <!-- MODAL LOGIN BOX -->
-      <div id="modal-id01" class="modal">
-        <form class="modal-content animate" action="/action_page.php">
-          <div class="modal-container">
-            <label> Login </label>
-            <label>Usuario</label>
-            <input
-              type="text"
-              placeholder="Nombre de Usuario"
-              name="uname"
-              required
-            />
-
-            <label>Contraseña</label>
-            <input
-              type="password"
-              placeholder="Contraseña"
-              name="psw"
-              required
-            />
-            <input type="checkbox" checked="checked" /> Recordarme
-          </div>
-
-          <div class="modal-container-button">
-            <div>
-              <button type="submit" class="modal-confirmbtn">
-                Confirmar
-                <img
-                  src="{{ url_for('static', filename='img/svg/fa/check-solid.svg') }}"
-                  alt="icono logout"
-                  height="30"
-                />
-              </button>
-            </div>
-            <div>
-              <button
-                type="button"
-                onclick="closeModal()"
-                class="modal-cancelbtn text-button"
-              >
-                Cancelar<img
-                  src="{{ url_for('static', filename='img/svg/fa/xmark-solid.svg') }}"
-                  alt="icono logout"
-                  height="30"
-                />
-              </button>
-            </div>
-          </div>
-          <span class="modal-psw"
-            ><a href="#">¿Ha olvidado su Contraseña?</a></span
-          >
-          <span class="modal-psw"><a href="{{ url_for("register") }}">¿Eres Nuevo Usuario?</a></span>
-        </form>
+          <li>
+            <a href={{ url_for("booking") }}>
+              <span class="icon">
+                <i class="fa-solid fa-book"></i>
+              </span>
+              <span class="title">Reservas</span>
+            </a>
+          </li>
+          <li>
+            <a href={{ url_for("contact") }}>
+              <span class="icon">
+                <i class="fa-solid fa-phone"></i>
+              </span>
+              <span class="title">Contacto</span>
+            </a>
+          </li>
+          <li>
+            <a href={{ url_for("about") }}>
+              <span class="icon">
+                <i class="fa-solid fa-id-badge"></i>
+              </span>
+              <span class="title">Sobre Nosotros</span>
+            </a>
+          </li>
+          <li>
+            <!-- TODO if logged in then go to user -->
+            <a href="#">
+              <span class="icon modal-btn" onclick="openModal()" data-open="modal-id01">
+                <i class="fa-solid fa-circle-user"></i>
+              </span>
+              <span class="title" onclick="openModal()" data-open="modal-id01">Usuario</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="icon modal-btn" onclick="openModal()" data-open="modal-id01">
+                <i class="fa-solid fa-right-to-bracket"></i>
+              </span>
+              <span class="title" onclick="openModal()" data-open="modal-id01">Iniciar Sesión</span>
+            </a>
+          </li>
+          <li>
+            <a href={{ url_for("cerrar_sesion") }}>
+              <span class="icon">
+                <i class="fa-solid fa-id-badge"></i>
+              </span>
+              <span class="title" id="cerrar_sesion">Cerrar Sesión</span>
+            </a>
+          </li>
+        </ul>
       </div>
-      <!-- END MODAL BOX -->
-      <div id="mainContent">
-        {% block content %} {% endblock %}
-      </div>
+    </nav>
 
-      <footer id="footer">
-        <div id="nav-footer">
-          <ul id="nav-footer-1" class="nav-footer">
-            <li><a href="#">Historia</a></li>
-            <li><a href="#">Nuestra Marca</a></li>
-            <li><a href="#">Visión</a></li>
-            <li><a href="#">Metas</a></li>
-            <li><a href="#">Valores Rotana</a></li>
-            <li><a href="#">Ejecutivos Corporativos</a></li>
-          </ul>
-          <ul id="nav-footer-2" class="nav-footer">
-            <li><a href="#">Clientes Corporativos</a></li>
-            <li><a href="#">Noticias</a></li>
-            <li><a href="#">Premios</a></li>
-            <li><a href="#">Multimedia</a></li>
-            <li><a href="#">Aperturas</a></li>
-            <li><a href="#">Tours</a></li>
-          </ul>
-          <ul id="nav-footer-3" class="nav-footer">
-            <li>WEBSITES ROTANA</li>
-            <li><a href="https://www.rotana.com/">rotana.com</a></li>
-            <li>
-              <a href="https://www.rotanatimes.com/">rotanatimes.com</a>
-            </li>
-            <li>
-              <a href="https://www.rotanaearth.com/">rotanaearth.com</a>
-            </li>
-            <li>
-              <a href="http://www.rotanacareers.com/">rotanacareers.com</a>
-            </li>
-          </ul>
+    <!-- MODAL LOGIN BOX -->
+    <div id="modal-id01" class="modal">
+      <form class="modal-content animate" action="/login" method="post">
+        <div class="modal-container">
+          <label> Login </label>
+          <label>Usuario</label>
+          <input type="text" placeholder="Nombre de Usuario" name="correo" required />
+
+          <label>Contraseña</label>
+          <input type="password" placeholder="Contraseña" name="contrasena" required />
+          <input type="checkbox" checked="checked" /> Recordarme
         </div>
-        <!-- LOGOS ROTANA RYHAAN FOOTER -->
-        <div class="logo-footer">
-          <a href="index.html">
-            <img
-              src="{{ url_for('static',
-                filename='img/svg/logo-ryhaan_dubai.svg') }}"
-              alt="Logo Rose Ryhaan Dubai"
-              height="35"
-            />
-          </a>
-          <a href="https://rotana.com">
-            <img
-              src="{{ url_for('static',
-                filename='img/svg/logo-rotana.svg') }}"
-              alt="logo Rotana"
-              height="35"
-            />
-          </a>
-        </div>
-  
-        <div class="footer-bottom">
+
+        <div class="modal-container-button">
           <div>
-            <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
+            <button type="submit" class="modal-confirmbtn">
+              Confirmar
+              <img src="{{ url_for('static', filename='img/svg/fa/check-solid.svg') }}" alt="icono logout"
+                height="30" />
+            </button>
           </div>
           <div>
-            <div class="social-media">
-              <span>
-                <a href="#"><i class="icon fab fa-lg fa-facebook-square"></i></a>
-              </span>
-              <span>
-                <a href="#"><i class="icon fab fa-lg fa-youtube"></i></a>
-              </span>
-              <span>
-                <a href="#"><i class="icon fab fa-lg fa-twitter"></i></a>
-              </span>
-              <span>
-                <a href="#"><i class="icon fab fa-lg fa-pinterest"></i></a>
-              </span>
-              <span>
-                <a href="#"><i class="icon fab fa-lg fa-instagram"></i></a>
-              </span>
-            </div>
+            <button type="button" onclick="closeModal()" class="modal-cancelbtn text-button">
+              Cancelar<img src="{{ url_for('static', filename='img/svg/fa/xmark-solid.svg') }}" alt="icono logout"
+                height="30" />
+            </button>
           </div>
         </div>
-      </footer>
-
+        <span class="modal-psw"><a href="#">¿Ha olvidado su Contraseña?</a></span>
+        <span class="modal-psw"><a href="{{ url_for("register") }}">¿Eres Nuevo Usuario?</a></span>
+      </form>
+    </div>
+    <!-- END MODAL BOX -->
+    <div id="mainContent">
+      {% block content %} {% endblock %}
     </div>
 
-  </body>
-  {% block scripts %}
-  {% endblock %}
+    <footer id="footer">
+      <div id="nav-footer">
+        <ul id="nav-footer-1" class="nav-footer">
+          <li><a href="#">Historia</a></li>
+          <li><a href="#">Nuestra Marca</a></li>
+          <li><a href="#">Visión</a></li>
+          <li><a href="#">Metas</a></li>
+          <li><a href="#">Valores Rotana</a></li>
+          <li><a href="#">Ejecutivos Corporativos</a></li>
+        </ul>
+        <ul id="nav-footer-2" class="nav-footer">
+          <li><a href="#">Clientes Corporativos</a></li>
+          <li><a href="#">Noticias</a></li>
+          <li><a href="#">Premios</a></li>
+          <li><a href="#">Multimedia</a></li>
+          <li><a href="#">Aperturas</a></li>
+          <li><a href="#">Tours</a></li>
+        </ul>
+        <ul id="nav-footer-3" class="nav-footer">
+          <li>WEBSITES ROTANA</li>
+          <li><a href="https://www.rotana.com/">rotana.com</a></li>
+          <li>
+            <a href="https://www.rotanatimes.com/">rotanatimes.com</a>
+          </li>
+          <li>
+            <a href="https://www.rotanaearth.com/">rotanaearth.com</a>
+          </li>
+          <li>
+            <a href="http://www.rotanacareers.com/">rotanacareers.com</a>
+          </li>
+        </ul>
+      </div>
+      <!-- LOGOS ROTANA RYHAAN FOOTER -->
+      <div class="logo-footer">
+        <a href="index.html">
+          <img src="{{ url_for('static',
+                filename='img/svg/logo-ryhaan_dubai.svg') }}" alt="Logo Rose Ryhaan Dubai" height="35" />
+        </a>
+        <a href="https://rotana.com">
+          <img src="{{ url_for('static',
+                filename='img/svg/logo-rotana.svg') }}" alt="logo Rotana" height="35" />
+        </a>
+      </div>
+
+      <div class="footer-bottom">
+        <div>
+          <h5>&copy; Copyright 2022 Fake Rotana Hotels Corporation</h5>
+        </div>
+        <div>
+          <div class="social-media">
+            <span>
+              <a href="#"><i class="icon fab fa-lg fa-facebook-square"></i></a>
+            </span>
+            <span>
+              <a href="#"><i class="icon fab fa-lg fa-youtube"></i></a>
+            </span>
+            <span>
+              <a href="#"><i class="icon fab fa-lg fa-twitter"></i></a>
+            </span>
+            <span>
+              <a href="#"><i class="icon fab fa-lg fa-pinterest"></i></a>
+            </span>
+            <span>
+              <a href="#"><i class="icon fab fa-lg fa-instagram"></i></a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  </div>
+
+</body>
+{% block scripts %}
+{% endblock %}
+
 </html>
