Se realizó el home de users y cambios de contraseña encriptados

--- a/static/css/deprecated/gestionAdministradores.css
+++ b/static/css/deprecated/gestionAdministradores.css
@@ -51,6 +51,10 @@
   margin: 0 1rem 1rem 1rem;
 } */
 
+.form_dataUser{
+  display: none;
+}
+
 table {
   margin-left: 10%;
   border-collapse: separate;
