--- a/static/css/base-forms.css
+++ b/static/css/base-forms.css
@@ -1,11 +1,12 @@
 h2 {
   color: var(--blue);
-  /* margin: 5rem 0 1rem 0; */
   padding: 1rem 0 1rem 0;
 }
 
-.dataUser {
+.form_dataUser {
+  display:none;
 }
+
 .form {
   /* background-color: #f8f8f299; */
   background-color: var(--white);
