--- a/templates/gestionHabitaciones.html
+++ b/templates/gestionHabitaciones.html
@@ -325,7 +325,7 @@
             <th>Gestionar</th>
           </tr>
         </thead>
-        <tbody style="cursor: pointer">
+        <tbody>
           {% for i in range(habitaciones|length) %}
           <tr>
             <td>{{ habitaciones[i][0] }}</td>
@@ -378,9 +378,7 @@
   </section>
 </section>
 <script>
-  function seleccionar(tr, value) {
-    this.chk1.click();
-  }
+  
 </script>
 
 {% endblock %}
