--- a/templates/users.html
+++ b/templates/users.html
@@ -1,24 +1,8 @@
 {% extends "base.html" %} {% block head %}
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-tables.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-forms.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-buttons.css') }}"
-/>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-tables.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-forms.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-buttons.css') }}" />
 <!-- <link
   rel="stylesheet"
   type="text/css"
@@ -39,13 +23,7 @@
       <input type="date" class="campo-modal" disabled />
 
       <label><b>Comentario</b></label>
-      <textarea
-        class="campo-modal"
-        placeholder="Comentario"
-        maxlength="630"
-        cols="30"
-        rows="10"
-      ></textarea>
+      <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30" rows="10"></textarea>
       <!-- <input type="text" placeholder="Comentario" /> -->
 
       <!-- <input type="checkbox" checked="checked" /> Recordarme -->
@@ -55,24 +33,13 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <div>
-        <button
-          type="button"
-          onclick="document.getElementById('modal-id02').style.display='none'"
-          class="modal-cancelbtn"
-        >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+        <button type="button" onclick="document.getElementById('modal-id02').style.display='none'"
+          class="modal-cancelbtn">
+          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
     </div>
@@ -96,14 +63,7 @@
       <input type="date" class="campo-modal" disabled />
 
       <label><b>Comentario</b></label>
-      <textarea
-        class="campo-modal"
-        placeholder="Comentario"
-        maxlength="630"
-        cols="30"
-        rows="10"
-        disabled
-      ></textarea>
+      <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30" rows="10" disabled></textarea>
       <!-- <input type="text" placeholder="Comentario" /> -->
 
       <!-- <input type="checkbox" checked="checked" /> Recordarme -->
@@ -113,24 +73,13 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <div>
-        <button
-          type="button"
-          onclick="document.getElementById('modal-id03').style.display='none'"
-          class="modal-cancelbtn"
-        >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+        <button type="button" onclick="document.getElementById('modal-id03').style.display='none'"
+          class="modal-cancelbtn">
+          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
     </div>
@@ -167,24 +116,13 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img
-            src="img/svg/fa/check-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
       <div>
-        <button
-          type="button"
-          onclick="document.getElementById('modal-id04').style.display='none'"
-          class="modal-cancelbtn"
-        >
-          Cancelar<img
-            src="img/svg/fa/xmark-solid.svg"
-            alt="icono logout"
-            height="30"
-          />
+        <button type="button" onclick="document.getElementById('modal-id04').style.display='none'"
+          class="modal-cancelbtn">
+          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
         </button>
       </div>
     </div>
@@ -197,139 +135,175 @@
 <!-- SECCION PRINCIPAL -->
 <!-- AREA PRINCIPAL -->
 <section class="dataUser">
-  <h2>Datos de Usuario</h2>
-  <form action="#" class="form inputs_dataUser">
-    <p>
-      <label class="texto" for="cedula">Cédula</label>
-      <span>
-        <input type="email" name="cedula" id="cedula" />
-      </span>
-    </p>
-    <p>
-      <label class="texto" for="nombre">Nombre</label>
-      <span>
-        <input type="email" name="nombre" id="nombre" />
-      </span>
-    </p>
-    <p>
-      <label class="texto" for="apellido">Apellido</label>
-      <span>
-        <input type="email" name="apellido" id="apellido" />
-      </span>
-    </p>
-    <p>
-      <label for="fechaNacimiento">Fecha de Nacimiento</label>
-      <span>
-        <input type="date" name="fechaNacimiento" id="fechaNacimiento" />
-      </span>
-    </p>
-    <p>
-      <label for="correo">Correo Electrónico</label>
-      <span>
-        <input type="email" name="correo" id="correo" />
-      </span>
-    </p>
-    <p>
-      <label for="celular">Celular</label>
-      <span>
-        <input type="phone" name="celular" id="celular" />
-      </span>
-    </p>
-    <p>
-      <input
-        class="btn-submit btn-submit-blue btnGuardar"
-        type="submit"
-        name="botonGuardar"
-        value="Guardar"
-        onclick="document.getElementById('modal-id04').style.display='block'"
-        data-open="modal-id04"
-      />
-    </p>
-  </form>
-</section>
-<!-- LISTA RESERVAS -->
-<div class="reserves">
-  <h2>Listado de Reservas</h2>
-  <table class="tables reservesTable">
-    <thead>
-      <tr>
-        <caption>
-          Se presentan todas las reservas activas e inactivas
-        </caption>
-        <th>ID</th>
-        <th>Fecha</th>
-        <th>Entrada</th>
-        <th>Salida</th>
-        <th>Huespedes</th>
-        <th>$ Valor</th>
-        <th>Estado</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
-  <h4>
-    ¿Quieres realizar cambios?
-    <strong><a href="#">Contáctanos</a></strong>
-  </h4>
-</div>
-<!-- LISTA COMENTARIOS -->
-<div class="reviews">
-  <h2>Comentarios Realizados</h2>
-  <div>
-    <table class="tables reviewsTable">
+  <section class="userEdit">
+    <h2>Datos de Usuario</h2>
+    <form action="#" class="form" method="post">
+      <p>
+        <label for="cedula">Cédula</label>
+        <span>
+          <i class="fa-solid fa-id-card"></i>
+          <input type="text" class="input_user" name="Cedula" id="cedula" value="{{ usuario[1] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="nombre">Nombre</label>
+        <span>
+          <i class="fa-solid fa-person"></i>
+          <input type="text" class="input_user" name="Nombre" id="nombre" value="{{ usuario[2] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="apellido">Apellido</label>
+        <span>
+          <i class="fa-solid fa-person"></i>
+          <input type="text" class="input_user" name="Apellidos" id="apellido" value="{{ usuario[3] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="fechaNacimiento">Fecha de Nacimiento</label>
+        <span>
+          <i class="fa-solid fa-cake-candles"></i>
+          <input type="date" class="input_user" name="Fecha_Nacimiento" id="fechaNacimiento" value="{{ usuario[4] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="correo">Correo Electrónico</label>
+        <span>
+          <i class="fa-solid fa-envelope"></i>
+          <input type="email" class="input_user" name="Correo" id="correo" value="{{ usuario[5] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="celular">Celular</label>
+        <span>
+          <i class="fa-solid fa-mobile-screen-button"></i>
+          <input type="phone" class="input_user" name="Celular" id="celular" value="{{ usuario[6] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="tipoUsuario">Tipo de Usuario</label>
+        <span>
+          <i class="fa-solid fa-ranking-star"></i>
+          <input type="text" class="input_user" name="Tipo_Usuario" id="tipoUsuario" value="{{ usuario[7] }}"
+            readonly />
+        </span>
+      </p>
+      <p>
+        <label for="anteriorContrasena">Anterior Contraseña</label>
+        <span>
+          <input type="password" class="input_user" name="Anterior_Contrasena" id="anteriorContrasena"
+            placeholder="Anterior Contraseña" />
+        </span>
+      </p>
+      <p>
+        <label for="nuevaContrasena">Nueva Contraseña</label>
+        <span>
+          <input type="password" class="input_user" name="Nueva_Contrasena" id="nuevaContrasena"
+            placeholder="Nueva Contraseña" />
+        </span>
+      </p>
+      <p>
+        <label for="repetirContrasena">Repetir Contraseña</label>
+        <span>
+          <input type="password" class="input_user" name="Repetir_Contrasena" id="repetirContrasena"
+            placeholder="Repetir Contraseña" />
+        </span>
+      </p>
+      <p>
+        <input class="btn-submit btn-submit-blue btnGuardar" type="submit" name="botonGuardar" value="Guardar"
+          onclick="document.getElementById('modal-id04').style.display='block'" data-open="modal-id04" />
+      </p>
+    </form>
+  </section>
+  <!-- LISTA RESERVAS -->
+  <section class="bookings">
+    <h2>Listado de Reservas</h2>
+    <table class="tables tables_bookings">
       <thead>
         <tr>
-          <th>ID</th>
-          <th>Fecha</th>
-          <th>Comentario</th>
-          <th>
-            All<input type="checkbox" name="check[]" value="0" id="chk0" />
-          </th>
+          <th>Id</th>
+          <th>Id Usuario</th>
+          <th>Check-in</th>
+          <th>Check-out</th>
+          <th>Ver/Eliminar</th>
+          <!-- <th>
+              All<input type="checkbox" name="check[]" value="0" id="chk0" />
+            </th> -->
         </tr>
       </thead>
-      <tbody style="cursor: pointer">
-        <tr onclick="seleccionar(this,1)">
-          <td>DFG555</td>
-          <td>24/07/2022</td>
-          <td>El hotel es increíble, totalmente recomendado</td>
-          <td onclick="seleccionar(this,1)">
-            <input type="checkbox" name="check[]" value="1" id="chk1" />
+      <tbody>
+        {% for i in range(reservas|length) %}
+
+        <tr>
+          <!-- <tbody style="cursor: pointer">
+          <tr onclick="seleccionar(this,1)"> -->
+          <td>{{ reservas[i][0] }}</td>
+          <td>{{ reservas[i][1] }}</td>
+          <td>{{ reservas[i][2] }}</td>
+          <td>{{ reservas[i][3] }}</td>
+          <td>
+            <!-- <a href="/editarReview/{{reservas[i][0]}}" class="btnEditar" id="btnEditarComentario">Editar</a> -->
+            <a href="/eliminarReserveAdmin/{{reservas[i][0]}}"
+              class="btnEliminar btn-submit btn-submit-red">Eliminar</a>
           </td>
+          <!-- <td onclick="seleccionar(this,1)">
+              <input type="checkbox" name="check[]" value="1" id="chk1" />
+            </td> -->
         </tr>
+        {% endfor %}
       </tbody>
     </table>
-  </div>
-  <div>
-    <input
-      class="btn-submit btn-submit-blue btnEditar"
-      type="submit"
-      name="botonEditar"
-      value="Editar Comentario"
-      onclick="document.getElementById('modal-id02').style.display='block'"
-      data-open="modal-id02"
-    />
-    <input
-      class="btn-submit btn-submit-red btnEliminar"
-      type="submit"
-      name="botonEliminar"
-      value="Eliminar Comentario"
-      onclick="document.getElementById('modal-id03').style.display='block'"
-      data-open="modal-id03"
-    />
-    <!-- <h4><strong><a href="#">Borrar Comentario</a></strong></h4> -->
-  </div>
-</div>
+    <!-- <section>
+      <input class="btnEditar" type="submit" name="botonEditar" value="Editar Reserva" />
+      <h4>
+        <strong><a href="#">Borrar Reserva</a></strong>
+      </h4>
+    </section> -->
+  </section>
 
+
+  <!-- LISTA COMENTARIOS -->
+  <section class="reviews">
+    <h2>Comentarios Realizados</h2>
+    <div>
+      <table class="tables table_reviews" id="table_reviews">
+        <thead>
+          <tr>
+            <th>Id</th>
+            <th>Id Usuario</th>
+            <th>Fecha</th>
+            <th>Comentario</th>
+            <th>Eliminar</th>
+            <!-- <th>
+                  All<input type="checkbox" name="check[]" value="0" id="chk0" />
+                </th> -->
+          </tr>
+        </thead>
+        <tbody>
+          {% for i in range(comentarios|length) %}
+
+          <tr>
+            <!-- <tbody style="cursor: pointer">
+              <tr onclick="seleccionar(this,1)"> -->
+            <td>{{ comentarios[i][0] }}</td>
+            <td>{{ comentarios[i][1] }}</td>
+            <td>{{ comentarios[i][2] }}</td>
+            <td>{{ comentarios[i][3] }}</td>
+            <td>
+              <!-- <a href="/editarReview/{{comentarios[i][0]}}" class="btnEditar" id="btnEditarComentario">Editar</a> -->
+              <a href="/editarReview/{{comentarios[i][0]}}" class="btn-submit btn-submit-blue">Editar</a>
+            </td>
+            <!-- <td onclick="seleccionar(this,1)">
+                  <input type="checkbox" name="check[]" value="1" id="chk1" />
+                </td> -->
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </section>
+</section>
 <script>
-  function seleccionar(tr, value) {
-    this.chk1.click();
-  }
 </script>
 
 {% endblock %}
