--- a/templates/gestionAdministradores.html
+++ b/templates/gestionAdministradores.html
@@ -207,10 +207,10 @@
       </div>
     </form>
   </section>
-  <section>
-    <table class="tables table_admins" id="table_admins">
-      <h2>Lista de Administradores</h2>
+  <section id="table_admins">
+    <table class="tables table_admins">
       <thead>
+        <h2>Lista de Administradores</h2>
         <tr>
           <th>Id</th>
           <th>Cédula</th>
